--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
 	"engines": {
 		"node": ">=14.0.0"
 	},
+	"peerDependencies": {
+		"eslint": ">=8.0.0"
+	},
+	"devDependencies": {
+		"eslint": "^8.57.0"
+	},
 	"files": [
 		"index.js",
 		"react.js",
